# python-monorepo-example

./: .gitignore  README.md  dev-requirements.txt  pip-requirements.txt  pyproject.toml  tox.ini
.github/workflows/: ci_base.yml  ci_fancy.yml  top_level.yml
libs/base/: pyproject.toml  requirements.txt
libs/fancy/: pyproject.toml  requirements.txt
scripts/: rebuild-sandbox.sh
templates/pylibrary/: README.md  cookiecutter.json  pyproject.toml
templates/pylibrary/hooks/: post_gen_project.py
templates/pylibrary/{{cookiecutter.module_name}}/: pyproject.toml  requirements.txt
templates/pylibrary/{{cookiecutter.module_name}}/legalplace/{{cookiecutter.module_name}}/: logging_config.py
