# Technically this section is not required, because this top-level pyproject.ml
# is only used for configuring tools, not for building anything.
# But we nevertheless have it, to be consistent with projects and libraries.
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

[tool.poetry.dev-dependencies]
black = "^24.8.0"
ruff = "^0.6.6"
pylint = "^3.3.0"
pyright = "^1.1.382"
pytest = "^7.2.1"

[tool.black]
line-length = 100
target-version = ['py311']
force-exclude = '''
^/archives/.*$
'''

[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "invalid-name",
]
ignore = ["setup.py", "__init__.py"]
ignore-paths = ['.*/tests']

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 100
target-version = "py311"
select = ["E", "F", "B"]
