[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mycorp-{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.package_description }}"
authors = [
  "{{ cookiecutter.owner_full_name }} <{{ cookiecutter.owner_email_address }}>",
]
packages = [{ include = "mycorp" }]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
pylint = "^3.0.1"
pyright = "^1.1.332"
pytest = "^7.4.2"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pyright]

[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
]
ignore = ["setup.py", "__init__.py"]
ignore-paths = ["tests"]
